@@ -1,3 +1,7 @@
+2009-01-18  Michiel Roos <michiel@netcreators.com>
+
+	* #8372: No IconWorks used (Thanks to Niels Fr?hling)
+	
 2008-12-26  Michiel Roos <michiel@netcreators.com>
 
 	* Setting version to 1.1.0
